tests/tooling/fixtures/native/execution/positive/do_while_sum.objc3
module DoWhileSumExec;

fn main() -> i32 {
  let i = 0;
  let sum = 0;
  do {
    i = i + 1;
    sum = sum + i;
  } while (i < 5);
  return sum;
}

