tests/tooling/fixtures/native/execution/negative/do_while_missing_while_keyword.objc3
module DoWhileMissingWhileKeywordExec;

fn main() -> i32 {
  do {
    let i = 1;
  } (1 < 2);
  return 0;
}

